--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
 
                 <div class="form-check d-flex justify-content-between align-items-center p-0 disabled-block">
                     <label class="form-check-label">Horn</label>
-                    <button class="nav-btn small-btn" onmousedown="set_property('horn', 'PLAY')" onmouseup="set_property('horn', 'STOP')">
+                    <button class="nav-btn small-btn" onmousedown="set_property('horn', 1)" onmouseup="set_property('horn', 0)">
                         <i class="bi bi-volume-up contained-icon"></i>
                     </button>
                 </div>
